# profile-project-claude-plugin

./: .env.example  .gitignore  .mcp.json  AGENTS.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: codebase-analyzer.md  docs-analyzer.md  transcripts-analyzer.md
commands/: init.md  navigate.md  profile.md  query.md  refresh.md  status.md
docs/: marketplace-entry.md
skills/init-profile/: SKILL.md
skills/navigate-profile/: SKILL.md
skills/onboard/: SKILL.md
skills/profile-project/: SKILL.md
skills/query-project/: SKILL.md
skills/refresh-profile/: SKILL.md
src/profile_project/: __main__.py  server.py
src/profile_project/artifacts/: __init__.py  paths.py  schemas.py  store.py
src/profile_project/config/: __init__.py  conflicts.py  files.py  init_gate.py  provenance.py  settings.py  sources.py
src/profile_project/dag/: __init__.py  brief.py  graph.py  lifecycle.py  resolver.py  run_state.py
src/profile_project/sources/: classify.py  discover.py  index.py  manifest.py
src/profile_project/tools/: __init__.py  _envelope.py  artifact_tools.py  config_tools.py  dag_tools.py  sources_tools.py  vectorstore_tools.py
src/profile_project/vectorstore/: chroma_store.py  chunking.py  embedders.py  factory.py  ids.py  pinecone_store.py  protocols.py
tests/fixtures/tiny_project/: .profile_project_config.json  README.md
tests/fixtures/tiny_project/docs/: architecture.md
tests/fixtures/tiny_project/notes/: design-notes.md
tests/fixtures/tiny_project/src/widget/: __init__.py  cli.py  core.py
tests/integration/: test_end_to_end_tiny.py
tests/unit/: test_artifact_paths.py  test_artifact_schemas.py  test_artifact_store.py  test_artifact_tools.py  test_chroma_store.py  test_chunking.py  test_config_conflicts.py  test_config_provenance.py  test_config_secrets.py  test_config_sources.py  test_config_tools.py  test_dag_brief.py  test_dag_graph.py  test_dag_lifecycle.py  test_dag_resolver.py  test_dag_tools.py  test_embedders.py  test_envelope.py  test_init_gate.py  test_packaging.py  test_packaging_docs.py  test_pinecone_store.py  test_plugin_assets.py  test_register_tools.py  test_run_state.py  test_run_state_atomic.py  test_server_bootstrap.py  test_settings_model.py  test_sources_classify.py  test_sources_discover.py  test_sources_index.py  test_sources_manifest.py  test_sources_tools.py  test_vectorstore_factory.py  test_vectorstore_tools.py
